--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <h3 class="back">HAPPY NEW YAER</h3>
         <h3 style="margin: 0 30px;">Dear Mahak,</h2>
         <h4 style="margin: 5px 30px;">
-          Wishing You a very happy new year...Hope this year brings you all sorts of joy and Happiness..
-          and plzzzzzz unblock me and talk to me...forgot things that had happen last year .
+          Wishing You a very happy new year...Hope this year brings you all sorts of joy and Happiness.
+           Hmko unblock kr do larki...2025 aa gaya hai ab. 
       </h4>
         <h3 class="name">Ram Babu</h3>
       </div>
