--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
         <h3 style="margin: 0 30px;">Dear Mahak,</h2>
         <h4 style="margin: 5px 30px;">
           Wishing You a very happy new year...Hope this year brings you all sorts of joy and Happiness.
-           Hmko unblock kr do larki...2025 aa gaya hai ab. Presaan nahi krenge ab tmko hum...faltu faltu message v nahi krnge.
+           and you look cute and beautiful forever...and your amazing smile always remains on your face.
+          And you should unbock me..
       </h4>
         <h3 class="name">Ram Babu</h3>
       </div>
